// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicking a tab does something 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-7 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4"
    >
      Experiment Code Setup
    </h4>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      Connect this experiment to your code.
    </h6>
    <br />
    <div
      class="MuiTabs-root"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        style="overflow: hidden;"
      >
        <div
          class="MuiTabs-flexContainer MuiTabs-centered"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              React
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              WordPress.com
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              Logged Out Homepages
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              Raw HTTP
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root-8 PrivateTabIndicator-colorSecondary-10 MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      aria-labelledby="vertical-tab-0"
      hidden=""
      id="vertical-tabpanel-0"
      role="tabpanel"
    />
    <div
      aria-labelledby="vertical-tab-1"
      hidden=""
      id="vertical-tabpanel-1"
      role="tabpanel"
    />
    <div
      aria-labelledby="vertical-tab-2"
      id="vertical-tabpanel-2"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-13"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Example Code
        </h5>
        <pre
          style="display: block; overflow-x: auto; padding: 0.5em; background: rgb(240, 240, 240); color: rgb(68, 68, 68);"
        >
          <code>
            <span
              style="color: rgb(31, 113, 153);"
            >
              &lt;?php
            </span>
            


            <span
              style="font-weight: bold;"
            >
              require_once
            </span>
             
            <span
              style="font-weight: bold;"
            >
              __DIR__
            </span>
             . 
            <span
              style="color: rgb(136, 0, 0);"
            >
              '/../wp-content/lib/wpcom-abtest/wpcom-experiment-client.php'
            </span>
            ;
$experiment = WPCOM_Experiment_Client::instance( 
            <span
              style="color: rgb(136, 0, 0);"
            >
              'test'
            </span>
             );
$experiment-&gt;set_user( 
            <span
              style="font-weight: bold;"
            >
              null
            </span>
            , $_COOKIE[
            <span
              style="color: rgb(136, 0, 0);"
            >
              'tk_ai'
            </span>
            ] );

            <span
              style="font-weight: bold;"
            >
              switch
            </span>
            ( $experiment-&gt;get_variation() ) {
    
            <span
              style="font-weight: bold;"
            >
              case
            </span>
             
            <span
              style="color: rgb(136, 0, 0);"
            >
              'treatment'
            </span>
            :
        
            <span
              style="color: rgb(136, 136, 136);"
            >
              // do something with this variation
            </span>
            
        
            <span
              style="font-weight: bold;"
            >
              break
            </span>
            ;
    
            <span
              style="font-weight: bold;"
            >
              default
            </span>
            :
        
            <span
              style="color: rgb(136, 136, 136);"
            >
              // handle the default/control case
            </span>
            
        
            <span
              style="font-weight: bold;"
            >
              break
            </span>
            ;
}

          </code>
        </pre>
      </div>
    </div>
    <div
      aria-labelledby="vertical-tab-3"
      hidden=""
      id="vertical-tabpanel-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders as expected 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-root-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4"
    >
      Experiment Code Setup
    </h4>
    <h6
      class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom"
    >
      Connect this experiment to your code.
    </h6>
    <br />
    <div
      class="MuiTabs-root"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        style="overflow: hidden;"
      >
        <div
          class="MuiTabs-flexContainer MuiTabs-centered"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              React
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              WordPress.com
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              Logged Out Homepages
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              Raw HTTP
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root-2 PrivateTabIndicator-colorSecondary-4 MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      aria-labelledby="vertical-tab-0"
      hidden=""
      id="vertical-tabpanel-0"
      role="tabpanel"
    />
    <div
      aria-labelledby="vertical-tab-1"
      id="vertical-tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-6"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          Example Code
        </h5>
        <pre
          style="display: block; overflow-x: auto; padding: 0.5em; background: rgb(240, 240, 240); color: rgb(68, 68, 68);"
        >
          <code>
            <span
              style="color: rgb(31, 113, 153);"
            >
              &lt;?php
            </span>
            

require_lib( 
            <span
              style="color: rgb(136, 0, 0);"
            >
              'wpcom-abtest/wpcom-experiment'
            </span>
             );
$experiment = WPCOM_Experiment::instance( 
            <span
              style="color: rgb(136, 0, 0);"
            >
              'test'
            </span>
             );
$experiment-&gt;set_user( get_current_user_id(), $_COOKIE[
            <span
              style="color: rgb(136, 0, 0);"
            >
              'tk_ai'
            </span>
            ] );

            <span
              style="font-weight: bold;"
            >
              switch
            </span>
            ( $experiment-&gt;get_variation() ) {
    
            <span
              style="font-weight: bold;"
            >
              case
            </span>
             
            <span
              style="color: rgb(136, 0, 0);"
            >
              'treatment'
            </span>
            :
        
            <span
              style="color: rgb(136, 136, 136);"
            >
              // do something with this variation
            </span>
            
        
            <span
              style="font-weight: bold;"
            >
              break
            </span>
            ;
    
            <span
              style="font-weight: bold;"
            >
              default
            </span>
            :
        
            <span
              style="color: rgb(136, 136, 136);"
            >
              // handle the default/control case
            </span>
            
        
            <span
              style="font-weight: bold;"
            >
              break
            </span>
            ;
}

          </code>
        </pre>
      </div>
    </div>
    <div
      aria-labelledby="vertical-tab-2"
      hidden=""
      id="vertical-tabpanel-2"
      role="tabpanel"
    />
    <div
      aria-labelledby="vertical-tab-3"
      hidden=""
      id="vertical-tabpanel-3"
      role="tabpanel"
    />
  </div>
</div>
`;
